tests/baselines/reference/numberOnLeftSideOfInExpression.errors.txt
numberOnLeftSideOfInExpression.ts(3,1): error TS2454: Variable 'left' is used before being assigned.


==== numberOnLeftSideOfInExpression.ts (1 errors) ====
    var left: number;
    var right: any;
    left in right;
    ~~~~
!!! error TS2454: Variable 'left' is used before being assigned.